concord_examples/tests/ui/scope_params_block_removed.stderr
error: scope params blocks are not supported; declare params in `scope name(...)`
 --> tests/ui/scope_params_block_removed.rs:9:9
  |
9 |         params {
  |         ^^^^^^
